@@ -98,6 +98,10 @@ label {
     margin-bottom: 2px;
 }
 
+#g-navtable {
+	width: 100%;
+}
+
 .g-microthumbnavbar-top {
     border-bottom: 1px dashed grey;
 }
@@ -118,14 +122,6 @@ table.g-nav-pages {
 
 table.g-nav-pages td {
      padding: 0;
-}
-
-.g-borderright {
-     border-right: 1px dashed;
-}
-
-.g-borderleft {
-    border-left: 1px dashed;
 }
 
 /******************** End Navigation Styles ********************/
@@ -635,16 +631,12 @@ input:focus, textarea:focus, select:focus {
 input:hover.g-button, input:focus.g-button {
 }
 
+/* defined in ltr/rtl */
 .g-usernameInput, .g-usernameInput:focus {
-  background: url('../images/icons/user_gray.gif') no-repeat 1px 1px;
-  padding-left: 20px;
-  margin-left: 3px;
 }
 
+/* defined in ltr/rtl */
 .g-passwordInput, .g-passwordInput:focus {
-  background: url('../images/icons/key.gif') no-repeat 1px 1px;
-  padding-left: 20px;
-  margin-left: 3px;
 }
 
 /****** End general Form Styles *****/
