@@ -45,3 +45,21 @@ body {
 .g-tabset a {
     float: left;
 }
+
+.g-borderright {
+     border-right: 1px dashed;
+}
+
+.g-borderleft {
+    border-left: 1px dashed;
+}
+
+.g-usernameInput, .g-usernameInput:focus {
+	background: url('../images/icons/user_gray.gif') no-repeat left top;
+	padding-left: 20px;
+}
+
+.g-passwordInput, .g-passwordInput:focus {
+	background: url('../images/icons/key.gif') no-repeat left top;
+	padding-left: 20px;
+}
