@@ -1,3 +1,9 @@
+2008-05-16 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b123
+
+ * Fix: Arrow key navigation for rtl languages
+
+ * Fix: rebuild capture dates recursive.
+
 2008-03-25 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b122
 
  * Fix: Renaming an album-foldername in a subalbum ended in a wron redirect.
